# aoc2021

10a/: main.cpp
12a/: main.cpp
12b/: 12b  main.cpp
13b/: main.cpp
13c/: main.qml
15a/: 15a  15a.pro  main.cpp  main.qml  map.h
15b/: 15b  15b.pro  main.cpp  main.qml
1a/: main.cpp
1b/: main.cpp
2021/10b/: 10b  main.cpp
2021/11a/: main.cpp
2021/11b/: main.cpp
2021/12a/: 12a
2021/13a/: 13a  main.cpp
2021/13b/: 13b
2021/13c/: 13c  main.cpp
2021/15a/: game.cpp  main.cpp  main.qml
2021/15b/: 15b  main.cpp  main.qml  map.cpp
2021/2b/: main.cpp
2021/3b/: main.cpp
2021/4a/: 4a  main.cpp
2021/4b/: 4a
2021/5a/: 5a.pro.user.22  5a.pro.user.4.8-pre1
2021/5b/: main.cpp
2021/6a/: main.cpp
2021/6b/: 6b.pro
2021/7a/: 7a
2021/8a/: 8a
2021/9b/: main.cpp
2022/1a/: CMakeLists.txt  main.cpp
2022/1b/: CMakeLists.txt  main.cpp
2022/22a/: CMakeLists.txt  main.cpp  map22a.h
2022/23a/: CMakeLists.txt  grid.cpp  grid.h  main.cpp
2022/24a/: CMakeLists.txt  blizzard.cpp  blizzard.h  directions.h  location.cpp  location.h  main.cpp
2022/24b/: CMakeLists.txt  blizzard.cpp  blizzard.h  directions.cpp  directions.h  grid.cpp  grid.h  grid24b.h  input  input3  location.h  main.cpp  map2d.h  soln2  xy.cpp  xy.h
2022/3a/: CMakeLists.txt  main.cpp
2022/3b/: CMakeLists.txt  main.cpp
2022/4a/: CMakeLists.txt  main.cpp
2022/4b/: CMakeLists.txt  main.cpp
2022/5a/: CMakeLists.txt  main.cpp
2022/5b/: CMakeLists.txt  main.cpp
2022/6a/: CMakeLists.txt  main.cpp
2022/6b/: CMakeLists.txt  main.cpp
2023/1a/: CMakeLists.txt  main.cpp
2023/1b/: CMakeLists.txt  main.cpp
2023/2a/: CMakeLists.txt  main.cpp
3a/: main.cpp
4b/: main.cpp
5a/: Makefile  main.cpp
6a/: 6a
6b/: 6b  main.cpp
7a/: data  main.cpp
7b/: csv_istream_iterator.h
8a/: main.cpp
8b/: 8b  data4  data5  main.cpp
9a/: main.cpp
9b/: main.cpp
build-13a-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile
build-15a-Desktop_Qt_5_11_2_GCC_64bit-Debug/: 15a  Makefile  moc_game.cpp  moc_map.cpp  qrc_qml.cpp
build-15b-Desktop_Qt_5_11_2_GCC_64bit-Debug/: 15b  Makefile  qrc_qml.cpp
textSvg4/: main.cpp  main.qml  textSvg4.pro
